@@ -9,8 +9,12 @@ if [ `whereis doxygen | wc -w` -gt 1 ]; then
    doxygen doxygen.conf
    if [ `whereis latex | wc -w` -gt 1 ]; then
       cd latex
-      make all
-      make pdf
+      pdflatex refman.tex
+      pdflatex refman.tex
+      pdflatex refman.tex
+      pdflatex refman.tex
+      makeindex refman.idx
+      pdflatex refman.tex
       mv refman.pdf ../HepMC2_reference_manual.pdf
       cd ..
       rm -rf latex
